--- a/nota1.html
+++ b/nota1.html
@@ -2,8 +2,8 @@
     <span style="font-weight:bold;">"@versao":</span> <span style="color:green;">"2.00"</span>,
     <span style="font-weight:bold;">"NFe":</span> {
         <span style="font-weight:bold;">"infNFe":</span> {
-            <span style="font-weight:bold;">"@versao":</span> <span style="color:green;">"2.00"</span>,
             <span style="font-weight:bold;">"@Id":</span> <span style="color:green;">"NFe35130309339936000205550030008469231382917898"</span>,
+            <span style="font-weight:bold;">"@versao":</span> <span style="color:green;">"2.00"</span>,
             <span style="font-weight:bold;">"ide":</span> {
                 <span style="font-weight:bold;">"cUF":</span> <span style="color:green;">"35"</span>,
                 <span style="font-weight:bold;">"cNF":</span> <span style="color:green;">"38291789"</span>,
@@ -60,60 +60,62 @@
                 <span style="font-weight:bold;">"IE":</span> <span style="color:green;">"ISENTO"</span>,
                 <span style="font-weight:bold;">"email":</span> <span style="color:green;">"librelotto@mail.com"</span>
             },
-            <span style="font-weight:bold;">"det":</span> {
-                <span style="font-weight:bold;">"@nItem":</span> <span style="color:green;">"1"</span>,
-                <span style="font-weight:bold;">"prod":</span> {
-                    <span style="font-weight:bold;">"cProd":</span> <span style="color:green;">"025-1220-318-40"</span>,
-                    <span style="font-weight:bold;">"cEAN":</span> <span style="color:green;">"4051411545402"</span>,
-                    <span style="font-weight:bold;">"xProd":</span> <span style="color:green;">"Chuteira Puma Esito Finale IT"</span>,
-                    <span style="font-weight:bold;">"NCM":</span> <span style="color:green;">"64029990"</span>,
-                    <span style="font-weight:bold;">"CFOP":</span> <span style="color:green;">"6108"</span>,
-                    <span style="font-weight:bold;">"uCom":</span> <span style="color:green;">"PAR"</span>,
-                    <span style="font-weight:bold;">"qCom":</span> <span style="color:green;">"1"</span>,
-                    <span style="font-weight:bold;">"vUnCom":</span> <span style="color:green;">"94.91"</span>,
-                    <span style="font-weight:bold;">"vProd":</span> <span style="color:green;">"94.91"</span>,
-                    <span style="font-weight:bold;">"cEANTrib":</span> <span style="color:green;">"4051411545402"</span>,
-                    <span style="font-weight:bold;">"uTrib":</span> <span style="color:green;">"PAR"</span>,
-                    <span style="font-weight:bold;">"qTrib":</span> <span style="color:green;">"1"</span>,
-                    <span style="font-weight:bold;">"vUnTrib":</span> <span style="color:green;">"94.91"</span>,
-                    <span style="font-weight:bold;">"indTot":</span> <span style="color:green;">"1"</span>
-                },
-                <span style="font-weight:bold;">"imposto":</span> {
-                    <span style="font-weight:bold;">"ICMS":</span> {
-                        <span style="font-weight:bold;">"ICMS00":</span> {
-                            <span style="font-weight:bold;">"orig":</span> <span style="color:green;">"2"</span>,
-                            <span style="font-weight:bold;">"CST":</span> <span style="color:green;">"00"</span>,
-                            <span style="font-weight:bold;">"modBC":</span> <span style="color:green;">"3"</span>,
-                            <span style="font-weight:bold;">"vBC":</span> <span style="color:green;">"94.91"</span>,
-                            <span style="font-weight:bold;">"pICMS":</span> <span style="color:green;">"18.00"</span>,
-                            <span style="font-weight:bold;">"vICMS":</span> <span style="color:green;">"17.08"</span>
+            <span style="font-weight:bold;">"det":</span> [
+                {
+                    <span style="font-weight:bold;">"@nItem":</span> <span style="color:green;">"1"</span>,
+                    <span style="font-weight:bold;">"prod":</span> {
+                        <span style="font-weight:bold;">"cProd":</span> <span style="color:green;">"025-1220-318-40"</span>,
+                        <span style="font-weight:bold;">"cEAN":</span> <span style="color:green;">"4051411545402"</span>,
+                        <span style="font-weight:bold;">"xProd":</span> <span style="color:green;">"Chuteira Puma Esito Finale IT"</span>,
+                        <span style="font-weight:bold;">"NCM":</span> <span style="color:green;">"64029990"</span>,
+                        <span style="font-weight:bold;">"CFOP":</span> <span style="color:green;">"6108"</span>,
+                        <span style="font-weight:bold;">"uCom":</span> <span style="color:green;">"PAR"</span>,
+                        <span style="font-weight:bold;">"qCom":</span> <span style="color:green;">"1"</span>,
+                        <span style="font-weight:bold;">"vUnCom":</span> <span style="color:green;">"94.91"</span>,
+                        <span style="font-weight:bold;">"vProd":</span> <span style="color:green;">"94.91"</span>,
+                        <span style="font-weight:bold;">"cEANTrib":</span> <span style="color:green;">"4051411545402"</span>,
+                        <span style="font-weight:bold;">"uTrib":</span> <span style="color:green;">"PAR"</span>,
+                        <span style="font-weight:bold;">"qTrib":</span> <span style="color:green;">"1"</span>,
+                        <span style="font-weight:bold;">"vUnTrib":</span> <span style="color:green;">"94.91"</span>,
+                        <span style="font-weight:bold;">"indTot":</span> <span style="color:green;">"1"</span>
+                    },
+                    <span style="font-weight:bold;">"imposto":</span> {
+                        <span style="font-weight:bold;">"ICMS":</span> {
+                            <span style="font-weight:bold;">"ICMS00":</span> {
+                                <span style="font-weight:bold;">"orig":</span> <span style="color:green;">"2"</span>,
+                                <span style="font-weight:bold;">"CST":</span> <span style="color:green;">"00"</span>,
+                                <span style="font-weight:bold;">"modBC":</span> <span style="color:green;">"3"</span>,
+                                <span style="font-weight:bold;">"vBC":</span> <span style="color:green;">"94.91"</span>,
+                                <span style="font-weight:bold;">"pICMS":</span> <span style="color:green;">"18.00"</span>,
+                                <span style="font-weight:bold;">"vICMS":</span> <span style="color:green;">"17.08"</span>
+                            }
+                        },
+                        <span style="font-weight:bold;">"IPI":</span> {
+                            <span style="font-weight:bold;">"cEnq":</span> <span style="color:green;">"999"</span>,
+                            <span style="font-weight:bold;">"IPINT":</span> {
+                                <span style="font-weight:bold;">"CST":</span> <span style="color:green;">"53"</span>
+                            }
+                        },
+                        <span style="font-weight:bold;">"PIS":</span> {
+                            <span style="font-weight:bold;">"PISAliq":</span> {
+                                <span style="font-weight:bold;">"CST":</span> <span style="color:green;">"01"</span>,
+                                <span style="font-weight:bold;">"vBC":</span> <span style="color:green;">"94.91"</span>,
+                                <span style="font-weight:bold;">"pPIS":</span> <span style="color:green;">"1.65"</span>,
+                                <span style="font-weight:bold;">"vPIS":</span> <span style="color:green;">"1.57"</span>
+                            }
+                        },
+                        <span style="font-weight:bold;">"COFINS":</span> {
+                            <span style="font-weight:bold;">"COFINSAliq":</span> {
+                                <span style="font-weight:bold;">"CST":</span> <span style="color:green;">"01"</span>,
+                                <span style="font-weight:bold;">"vBC":</span> <span style="color:green;">"94.91"</span>,
+                                <span style="font-weight:bold;">"pCOFINS":</span> <span style="color:green;">"7.60"</span>,
+                                <span style="font-weight:bold;">"vCOFINS":</span> <span style="color:green;">"7.21"</span>
+                            }
                         }
                     },
-                    <span style="font-weight:bold;">"IPI":</span> {
-                        <span style="font-weight:bold;">"cEnq":</span> <span style="color:green;">"999"</span>,
-                        <span style="font-weight:bold;">"IPINT":</span> {
-                            <span style="font-weight:bold;">"CST":</span> <span style="color:green;">"53"</span>
-                        }
-                    },
-                    <span style="font-weight:bold;">"PIS":</span> {
-                        <span style="font-weight:bold;">"PISAliq":</span> {
-                            <span style="font-weight:bold;">"CST":</span> <span style="color:green;">"01"</span>,
-                            <span style="font-weight:bold;">"vBC":</span> <span style="color:green;">"94.91"</span>,
-                            <span style="font-weight:bold;">"pPIS":</span> <span style="color:green;">"1.65"</span>,
-                            <span style="font-weight:bold;">"vPIS":</span> <span style="color:green;">"1.57"</span>
-                        }
-                    },
-                    <span style="font-weight:bold;">"COFINS":</span> {
-                        <span style="font-weight:bold;">"COFINSAliq":</span> {
-                            <span style="font-weight:bold;">"CST":</span> <span style="color:green;">"01"</span>,
-                            <span style="font-weight:bold;">"vBC":</span> <span style="color:green;">"94.91"</span>,
-                            <span style="font-weight:bold;">"pCOFINS":</span> <span style="color:green;">"7.60"</span>,
-                            <span style="font-weight:bold;">"vCOFINS":</span> <span style="color:green;">"7.21"</span>
-                        }
-                    }
-                },
-                <span style="font-weight:bold;">"infAdProd":</span> <span style="color:green;">"EAN 4051411545402"</span>
-            },
+                    <span style="font-weight:bold;">"infAdProd":</span> <span style="color:green;">"EAN 4051411545402"</span>
+                }
+            ],
             <span style="font-weight:bold;">"total":</span> {
                 <span style="font-weight:bold;">"ICMSTot":</span> {
                     <span style="font-weight:bold;">"vBC":</span> <span style="color:green;">"94.91"</span>,
@@ -136,7 +138,7 @@
                 <span style="font-weight:bold;">"modFrete":</span> <span style="color:green;">"0"</span>,
                 <span style="font-weight:bold;">"transporta":</span> {
                     <span style="font-weight:bold;">"xNome":</span> <span style="color:green;">"EMPRESA BRASILEIRA DE CORREIOS E TELEGRAFOS"</span>,
-                    <span style="font-weight:bold;">"IE":</span> [ ]
+                    <span style="font-weight:bold;">"IE":</span> <span style="color:gray;">null</span>
                 },
                 <span style="font-weight:bold;">"vol":</span> {
                     <span style="font-weight:bold;">"qVol":</span> <span style="color:green;">"1"</span>,
